# SearchEngineV3

./: CMakeLists.txt  README.md
config/: answers.json  config.json  requests.json
include/: converterJSON.h  invertedIndex.h  searchEngine.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchEngine.cpp
tests/: CMakeLists.txt  indexTest.cpp  serverTest.cpp  test1.cpp
